<resources>
    <string name="app_name">Parashut</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="title_activity_fast_order">FastOrderActivity</string>

    <string name="title_activity_goto_home">GotoHomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_details_order">DetailsOrderActivity</string>
    <string name="google_maps_key">AIzaSyBkaf80f8PXyiQ_SfbEGh3S7SUuMQZdePY</string>
    <string name="all_item">All item</string>


    <string name="ifukneedhelp">اذا كان لديك استفسار يمكنك التواصل معنا</string>
    <string name="callcustomerservice">الاتصال بخدمة العملاء</string>
    <string name="needtona">مثال : لو سمحت محتاج علبة تونه</string>
    <string name="mobile">رقم الهاتف</string>

    <string name="aboutus">من نحن ؟</string>
    <string name="features">ما يميزنا</string>
    <string name="nameapp">براشوط</string>
    <string name="all">الكل</string>
    <string name="cart">سلة الشراء</string>
    <string name="countProducts">عدد المنتجات :</string>
    <string name="sum">المجموع :</string>
    <string name="EGP">جنيه</string>
    <string name="code">كود :</string>
    <string name="speedOrder">طلب سريع</string>
    <string name="status">الحاله</string>
    <string name="nameProduct">اسم المنتج</string>
    <string name="price">السعر</string>
    <string name="Cost">اجمالى التكلفة</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="pass_name">كلمة السر</string>
    <string name="forget_pass">نسيت كلمة السر ؟</string>
    <string name="no_account">ليس لدي حساب ؟</string>
    <string name="fast_order">اطلب حاجتك بسرعه</string>
    <string name="show_pass_btn">اظهار</string>
    <string name="sign">التسجيل</string>
    <string name="new_acc">  حساب جديد</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="name_app">براشوط</string>
    <string name="confirm">تأكيد الطلب</string>
    <string name="sale">الخصم بالجنيه</string>
    <string name="delivery">السائق</string>
    <string name="nameDelivry">اسم السائق</string>
    <string name="edit">تعديل</string>
    <string name="reRequest">اعادة الطلب مره اخري</string>
    <string name="requestbyClick">*يمكنك اعادة الطلب مره اخري بضغطه واحده*</string>
    <string name="sendReq">ارسال طلب</string>
    <string name="contactUs">تواصل معنا</string>
    <string name="whatsReq">ما هو طلبك ؟</string>
    <string name="clicktoselectlocation">"اضغط لاضافة عنوان "</string>
    <string name="orderspeed">اطلب حاجتك بسرعه</string>
    <string name="ShippingFee">اسعار التوصيل</string>
    <string name="changelang">تغيير اللغة</string>
    <string name="sheareapp">مشاركة التطبيق</string>
    <string name="rateapp">تقييم التطبيق</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="Addtocart">اضف الي البراشوت</string>
    <string name="suggestes">منتجات مشابهه</string>
    <string name="mostcommen">الشائعة</string>
    <string name="more">المزيد</string>
    <string name="weneedService">نحن في خدمتك</string>
    <string name="calusanytime">راسلنا في أي وقت</string>
    <string name="whatisyourmsg">ما هي رسالتك ؟</string>
    <string name="send">ارسال</string>

</resources>
