<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.usercontrol.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fLayout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:background="@drawable/toolbarradiuscolor">

            <ImageView
                android:id="@+id/iv_parachot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginStart="156dp"
                android:layout_marginLeft="156dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="156dp"
                android:layout_marginRight="156dp"
                android:background="@drawable/startup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AppTheme"
                android:id="@+id/tv_parachot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginLeft="141dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="141dp"
                android:layout_marginRight="141dp"
                android:text="براشوط"
                android:textColor="#ffffff"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_parachot"
                 />

            <TextView
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="125dp"
                android:layout_marginRight="125dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/fast_order"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_parachot"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/fLayout"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_signIn"
                    style="@style/AppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_text_input"
                    style="@style/TextInputLayout"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone_log"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:drawableRight="@drawable/ic_phone_1"
                        android:drawablePadding="15dp"
                        android:ems="1"
                        style="@style/AppTheme"
                        android:gravity="right"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grayblack"
                        android:textDirection="rtl"
                        android:textSize="18sp"
                        android:drawableEnd="@drawable/ic_phone_1" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <Button
                        android:id="@+id/show_pass"
                        android:layout_centerVertical="true"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:textSize="12sp"
                        android:textColor="@color/grayblack"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        style="@style/AppTheme"
                        android:text="@string/show_pass_btn"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pass_text_input"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_height="wrap_content"
                        >


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_pass_log"
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="65dp"
                            android:layout_marginTop="8dp"
                            android:drawableRight="@drawable/ic_privacy_1"
                            android:drawablePadding="15dp"
                            android:gravity="right"
                            android:hint="@string/pass_name"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textColorHighlight="@color/colorPrimaryDark"
                            android:textColorHint="@color/grayblack"
                            android:textDirection="rtl"
                            android:textSize="18sp"
                            android:drawableEnd="@drawable/ic_privacy_1" />


                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forget_pass"
                    android:text="@string/forget_pass"
                    style="@style/AppTheme"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"
                     />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_btn"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/btnclickcolor"
                    android:ems="1"
                    style="@style/AppTheme"
                    android:gravity="center"
                    android:text="@string/sign"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    tools:ignore="UnusedAttribute" />

                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView

                        android:layout_marginTop="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_acc"
                        style="@style/AppTheme"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="20dp" />

                    <TextView

                        android:id="@+id/tv_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme"
                        android:text="@string/no_account"
                        android:textColor="@color/grayblack"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                         />

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_shipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shopper"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                     />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</ScrollView>