<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="CartVmodel"
            type="com.mrerror.parachut.ui.cart.CartViewMmodel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cart.CartActivity">

        <FrameLayout
            android:id="@+id/containerCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.home_activity.fragments.fragmentsprofile.cartfragment.CartFragment">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"

                        android:layout_height="?actionBarSize"
                        android:layout_centerHorizontal="true"
                        android:background="@color/colorPrimary"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView

                            android:id="@+id/backbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_arrow_pointing_to_right" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/cart"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView

                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_magnifying_glass" />

                           </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/countProducts"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="( 3 )"
                            android:id="@+id/count"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cartShopRv"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="140dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/emptyCartTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="cart is Empty" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom"

                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grayblack" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:background="@color/graywhite"
                        android:gravity="center_vertical"
                        android:minHeight="160dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:gravity="center_horizontal"
                            android:paddingStart="6dp"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="SubTotal "
                                android:textColor="@color/gray"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/subPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="250"
                                android:textColor="@color/gray"
                                android:textSize="18sp" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginStart="16dp"
                            android:gravity="center_horizontal"
                            android:paddingStart="6dp">

                            <TextView
                                android:id="@+id/tvCardTotal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sum"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/totaltext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/totalCurrency"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/EGP"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/id_Relateve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"
                        android:background="@color/graywhite">


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnAddtoCard"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="bottom"

                            android:layout_marginLeft="32dp"
                            android:layout_marginTop="32dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/btn_plus"
                            android:backgroundTint="@color/colorPrimary"
                            android:elevation="0dp"
                            android:paddingStart="16dp"

                            android:text="@string/confirm"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="RtlCompat" />


                    </RelativeLayout>


                </LinearLayout>

            </RelativeLayout>
        </FrameLayout>


    </LinearLayout>
</layout>